// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Using lucide icon components > should add a non-default attribute to the element 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
     viewbox="0 0 24 24"
     fill="none"
     stroke="currentColor"
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
     style="position: absolute"
     class="lucide lucide-smile"
>
  <circle cx="12"
          cy="12"
          r="10"
  >
  </circle>
  <path d="M8 14s1.5 2 4 2 4-2 4-2">
  </path>
  <line x1="9"
        x2="9.01"
        y1="9"
        y2="9"
  >
  </line>
  <line x1="15"
        x2="15.01"
        y1="9"
        y2="9"
  >
  </line>
</svg>
`;

exports[`Using lucide icon components > should adjust the size, stroke color and stroke width 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="48"
     height="48"
     viewbox="0 0 24 24"
     fill="none"
     stroke="red"
     stroke-width="4"
     stroke-linecap="round"
     stroke-linejoin="round"
     class="lucide lucide-grid-3x3"
>
  <rect width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path d="M3 9h18">
  </path>
  <path d="M3 15h18">
  </path>
  <path d="M9 3v18">
  </path>
  <path d="M15 3v18">
  </path>
</svg>
`;

exports[`Using lucide icon components > should apply all classes to the element 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
     viewbox="0 0 24 24"
     fill="none"
     stroke="currentColor"
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
     class="lucide lucide-droplet my-icon"
>
  <path d="M12 22a7 7 0 0 0 7-7c0-2-1-3.9-3-5.5s-3.5-4-4-6.5c-.5 2.5-2 4.9-4 6.5C6 11.1 5 13 5 15a7 7 0 0 0 7 7z">
  </path>
</svg>
`;

exports[`Using lucide icon components > should not scale the strokeWidth when absoluteStrokeWidth is set 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="48"
     height="48"
     viewbox="0 0 24 24"
     fill="none"
     stroke="red"
     stroke-width="1"
     stroke-linecap="round"
     stroke-linejoin="round"
     class="lucide lucide-grid-3x3"
>
  <rect width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path d="M3 9h18">
  </path>
  <path d="M3 15h18">
  </path>
  <path d="M9 3v18">
  </path>
  <path d="M15 3v18">
  </path>
</svg>
`;

exports[`Using lucide icon components > should pass children to the icon slot 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
     viewbox="0 0 24 24"
     fill="none"
     stroke="currentColor"
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
     class="lucide lucide-smile"
>
  <circle cx="12"
          cy="12"
          r="10"
  >
  </circle>
  <path d="M8 14s1.5 2 4 2 4-2 4-2">
  </path>
  <line x1="9"
        x2="9.01"
        y1="9"
        y2="9"
  >
  </line>
  <line x1="15"
        x2="15.01"
        y1="9"
        y2="9"
  >
  </line>
  <p>
    Hello World
  </p>
</svg>
`;

exports[`Using lucide icon components > should render a component 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
     viewbox="0 0 24 24"
     fill="none"
     stroke="currentColor"
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
     class="lucide lucide-grid-3x3"
>
  <rect width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path d="M3 9h18">
  </path>
  <path d="M3 15h18">
  </path>
  <path d="M9 3v18">
  </path>
  <path d="M15 3v18">
  </path>
</svg>
`;

exports[`Using lucide icon components > should render the icon with default attributes 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
     viewbox="0 0 24 24"
     fill="none"
     stroke="currentColor"
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
     class="lucide lucide-grid-3x3"
>
  <rect width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path d="M3 9h18">
  </path>
  <path d="M3 15h18">
  </path>
  <path d="M9 3v18">
  </path>
  <path d="M15 3v18">
  </path>
</svg>
`;
